pagina lista y con responsive mode agregado

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Clon 2</title>
+    <title>Wireframe Software | Lucidchart</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="icon" href="images/icono.ico"/>
 </head>
 <body>
     
@@ -199,6 +201,28 @@
                    <li><a href="#">Terms</a></li>
                </ul>
            </div>
+        </div>
+
+        <div class="redesInfo">
+            <div class="redes">
+                <div class="icoRedes">
+                    <i class="fa fa-facebook"></i>
+                    <i class="fa fa-twitter"></i>
+                    <i class="fa fa-youtube"></i>
+                    <i class="fa fa-linkedin"></i>
+                    <i class="fa fa-glassdoor"></i>
+                </div>
+                <span><i class="fa fa-globe"></i>English</span>
+            </div>
+            <div class="app">
+                <img src="images/appStore.png" alt="">
+                <img src="images/playStore.png" alt="">
+            </div>
+            <div class="contacto">
+                <p class="tel">Contact sales: (877) 210-9890</p>
+            
+                <p>© 2017 Lucid Software Inc.</p>
+            </div>
         </div>
     </footer>
 </body>
